--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "npx concurrently --kill-others -c cyan,magenta \"npm:server\" \"npm:client\"",
     "client": "npx parcel src/client/index.html",
     "server": "npx ts-node-dev --respawn --ignore-watch node_modules src/server/server.ts",
-    "loaddata": "npx ts-node scripts/update-github-data.ts"
+    "dailyupdate": "npx ts-node scripts/load-nyt-data.ts"
   },
   "repository": {
     "type": "git",
@@ -31,20 +31,25 @@
     "@types/express": "^4.17.4",
     "@types/express-http-proxy": "^1.5.12",
     "@types/express-promise-router": "^3.0.0",
+    "@types/geojson": "^7946.0.7",
     "@types/highcharts": "^7.0.0",
+    "@types/leaflet": "^1.5.12",
     "@types/moment": "^2.13.0",
     "@types/papaparse": "^5.0.3",
     "@types/react-dom": "^16.9.6",
+    "@types/react-leaflet": "^2.5.1",
     "axios": "^0.19.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-http-proxy": "^1.6.0",
     "express-promise-router": "^3.0.3",
     "highcharts": "^8.0.4",
+    "leaflet": "^1.6.0",
     "moment": "^2.24.0",
     "papaparse": "^5.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-leaflet": "^2.6.3",
     "ts-node": "^8.8.1",
     "ts-node-dev": "^1.0.0-pre.44"
   }
