--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,9 @@
     // Specify JSX code generation: 'preserve', 'react-native', or 'react'.
     "jsx": "react",
 
+    // allow import/require json
+    "resolveJsonModule": true,
+
     // Generates corresponding '.d.ts' file.
     // "declaration": true,
 
